usuario reservando livro

--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -58,7 +58,7 @@
         <main class="content " role="main">
             <!-- barra de busca -->
             <section class="search-box">
-                <input type="text" class="search-input" placeholder="Busque o livro por título ou autor">
+                <input type="text" class="search-input" placeholder="Busque o livro pelo título">
                 <button class="search-btn" aria-label="Buscar">
                     <span class="material-symbols-outlined">search</span>
                 </button>
@@ -68,41 +68,11 @@
             <section class="books-section">
                 <div class="section-header">
                     <h2 class=" subtitle">Nome da seção</h2>
-                    <a href="#" class="see-more">
-                        ver mais <span class="material-symbols-outlined">chevron_right</span>
-                    </a>
                 </div>
                 <!-- carousel -->
                 <div class="carousel-wrapper">
-
                     <div class="books-grid">
                         <div class="book-card">
-                            <div class="book-cover"></div>
-                            <div class="book-info">
-                                <div class="book-title">Livro 1</div>
-                                <div class="book-author">Autor 1</div>
-                            </div>
-                        </div>
-                        <div class="book-card">
-                            <div class="book-cover"></div>
-                            <div class="book-info">
-                                <div class="book-title">Livro 2</div>
-                                <div class="book-author">Autor 2</div>
-                            </div>
-                        </div>
-                        <div class="book-card">
-                            <div class="book-cover"></div>
-                            <div class="book-info">
-                                <div class="book-title">Livro 2</div>
-                                <div class="book-author">Autor 2</div>
-                            </div>
-                        </div>
-                        <div class="book-card">
-                            <div class="book-cover"></div>
-                            <div class="book-info">
-                                <div class="book-title">Livro 3</div>
-                                <div class="book-author">Autor 3</div>
-                            </div>
                         </div>
                     </div>
                 </div>
