--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -69,24 +69,24 @@
                 
                 <div class="info-book-content">
                     <div class="info-book-item">
-                        <span class="label">Editora:</span>
+                        <span class="label">Editora</span>
                         <span class="info-book-value">Nome da Editora</span>
                     </div>
                     <div class="info-book-item">
-                        <span class="label">Ano de Publicação:</span>
+                        <span class="label">Ano de Publicação</span>
                         <span class="info-book-value">2023</span>
                     </div>
 
                     <div class="info-book-item">
-                        <span class="label">Número de Páginas:</span>
+                        <span class="label">Número de Páginas</span>
                         <span class="info-book-value">350</span>
                     </div>
                     <div class="info-book-item">
-                        <span class="label">Idioma:</span>
+                        <span class="label">Idioma</span>
                         <span class="info-book-value">Português</span>
                     </div>
                     <div class="info-book-item">
-                        <span class="label">Disponibilidade:</span>
+                        <span class="label">Disponibilidade</span>
                         <span class="info-book-value"><span class="text-success">Disponível</span></span>
                     </div>
                 </div>
@@ -104,6 +104,8 @@
             </div>
         </main>
     </div>
+</main>
+    <script src="assets/js/usuarioLivroInformacoes.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 <script src="assets/js/auth.js"></script>
