--- a/usuarioLivroEmprestar.html
+++ b/usuarioLivroEmprestar.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/usuario.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body class="body-color">
@@ -61,8 +62,8 @@
                         <h2 class="info-book-title title">Nome do Livro</h2>
                         <div class="info-book-author">Autor do livro</div>
                         <div class="emprestar-datas">
-                            <strong class="label">Data de empréstimo:</strong> 00/00/0000<br>
-                            <strong class="label">Data de devolução:</strong> 00/00/0000
+                            <span><strong class="label">Data de empréstimo:</strong> 00/00/0000</span>  
+                            <span><strong class="label">Data de devolução:</strong> 00/00/0000</span>
                         </div>
                     </div>
                 </div>
@@ -76,6 +77,7 @@
             </div>
         </main>
     </div>
+    <script src="assets/js/usuarioLivroEmprestar.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 <script src="assets/js/auth.js"></script>
