--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -70,7 +70,7 @@
                 <section class="search-section">
                     <label>Buscar livro:</label>
                     <div class="search-box">
-                        <input type="text" placeholder="Busque pelo título do livro" class="input">
+                        <input type="text" placeholder="Busque pelo título do livro" class="input input-full">
                         <button class="search-btn">
                             <i class="fas fa-search"></i>
                         </button>
@@ -96,7 +96,7 @@
                 <section class="search-section">
                     <label>Buscar Aluno:</label>
                     <div class="search-box">
-                        <input type="text" placeholder="Busque pelo RA" class="input">
+                        <input type="text" placeholder="Busque pelo RA" class="input input-full">
                         <button class="search-btn">
                             <i class="fas fa-search"></i>
                         </button>
@@ -128,6 +128,7 @@
 
         </main>
 
+        <script src="assets/js/adminEmprestarLivros.js"></script>
         <script src="assets/js/script.js"></script>
 </body>
     <script src="assets/js/auth.js"></script>
