--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -128,7 +128,9 @@
 
         </main>
 
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="assets/js/adminEmprestarLivros.js"></script>
+        <script src="assets/js/adminBuscarAluno.js"></script>
         <script src="assets/js/script.js"></script>
 </body>
     <script src="assets/js/auth.js"></script>
