--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -89,24 +89,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td data-label="RA"><strong>2023101</strong></td>
-                                <td data-label="Aluno">nome do aluno</td>
-                                <td data-label="Título do livro">nome do livro</td>
-                                <td data-label="Data de solicitação">12/07/2025</td>
-                                <td data-label="Localização">Seção 5</td>
-                                <td data-label="Tipo de ação"><span class="text-success">Retirada</span></td>
-                                <td data-label="Ações"><button class="btn btn-table btn-success">Confirmar retirada</button></td>
-                            </tr>
-                              <tr>
-                                <td data-label="RA"><strong>2023101</strong></td>
-                                <td data-label="Aluno">nome do aluno</td>
-                                <td data-label="Título do livro">nome do livro</td>
-                                <td data-label="Data de solicitação">12/07/2025</td>
-                                <td data-label="Localização">Seção 5</td>
-                                <td data-label="Tipo de ação"><span class="text-info">Devolução</span></td>
-                                <td data-label="Ações"><button class="btn btn-table btn-info">Confirmar devolução</button></td>
-                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -114,5 +96,7 @@
         </main>
     </div>
 </body>
-  <script src="assets/js/auth.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/adminLivrosRetiradaDevolucao.js"></script>
 </html>
