--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -177,5 +177,6 @@
         <script src="assets/js/cadastrarLivro.js"></script>
 </body>
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/logout.js"></script>
 
 </html>
