--- a/adminEmprestarLivros.html
+++ b/adminEmprestarLivros.html
@@ -134,5 +134,6 @@
         <script src="assets/js/script.js"></script>
 </body>
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/logout.js"></script>
 
 </html>
