--- a/adminLivrosListar.html
+++ b/adminLivrosListar.html
@@ -96,4 +96,5 @@
 </body>
     <script src="assets/js/listarLivros.js"></script>
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/logout.js"></script>
 </html>
