--- a/adminLivrosRetiradaDevolucao.html
+++ b/adminLivrosRetiradaDevolucao.html
@@ -98,5 +98,6 @@
 </body>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/logout.js"></script>
     <script src="assets/js/adminLivrosRetiradaDevolucao.js"></script>
 </html>
