--- a/adminValidarUsuarios.html
+++ b/adminValidarUsuarios.html
@@ -100,5 +100,6 @@
 <script src="assets/js/script.js"></script>
 <script src="assets/js/adminValidarUsuarios.js"></script>
 </body>
-<script src="assets/js/auth.js"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/logout.js"></script>
 </html>
