usuario historico em andamento

--- a/usuarioHistorico.html
+++ b/usuarioHistorico.html
@@ -99,6 +99,7 @@
       </div>
     </main>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/usuarioHistorico.js"></script>
 </body>
 <script src="assets/js/auth.js"></script>
 </html>
