painel do administrador concluido

--- a/adminHome.html
+++ b/adminHome.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="card-info">
                         <h3 class="stat-label">Usuários</h3>
-                        <p class="stat-value" id="stat-usuarios">1.245</p>
+                        <p class="stat-value" id="stat-usuarios"></p>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card-info">
                         <h3 class="stat-label">Livros</h3>
-                        <p class="stat-value" id="stat-livros">346</p>
+                        <p class="stat-value" id="stat-livros"></p>
                     </div>
                 </div>
 
@@ -94,7 +94,7 @@
                     </div>
                     <div class="card-info">
                         <h3 class="stat-label">Emprestados</h3>
-                        <p class="stat-value" id="stat-emprestados">98</p>
+                        <p class="stat-value" id="stat-emprestados"></p>
                     </div>
                 </div>
 
@@ -104,7 +104,7 @@
                     </div>
                     <div class="card-info">
                         <h3 class="stat-label">Atrasados</h3>
-                        <p class="stat-value" id="stat-atrasados">4</p>
+                        <p class="stat-value" id="stat-atrasados"></p>
                     </div>
                 </div>
             </div>
