--- a/adminLivroInfo.html
+++ b/adminLivroInfo.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<header class="topbar" role="banner">
+    <header class="topbar" role="banner">
         <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
             <span class="material-symbols-outlined">menu</span>
         </button>
@@ -21,9 +21,9 @@
             <span>Biblioteca</span>
         </div>
         <div class="action" role="button" tabindex="0">
-            <a href="index.html"  class="logout-link">
-            <span class="material-symbols-outlined">logout</span>
-            <span>Sair</span>
+            <a href="index.html" class="logout-link">
+                <span class="material-symbols-outlined">logout</span>
+                <span>Sair</span>
             </a>
         </div>
     </header>
@@ -69,6 +69,7 @@
 
                 <div>
                     <h2 class="title">Título</h2>
+                    <img id="book-cover-admin" src="" alt="Capa do livro">
                 </div>
 
                 <div class="book-details">
@@ -144,7 +145,7 @@
         <script src="assets/js/script.js"></script>
 </body>
 
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/logout.js"></script>
+<script src="assets/js/auth.js"></script>
+<script src="assets/js/logout.js"></script>
 
 </html>
