--- a/adminLivrosListar.html
+++ b/adminLivrosListar.html
@@ -70,7 +70,7 @@
                         <h2 class="title text-start">Listar livros</h2>
                     </div>
                     <div class="search-box-table">
-                        <input type="text" class="input" placeholder="Buscar pelo RA">
+                        <input type="text" class="input" placeholder="Buscar pelo título do livro">
                     </div>
                 </div>
 
