--- a/adminCadastrarLivros.html
+++ b/adminCadastrarLivros.html
@@ -90,8 +90,10 @@
                                 <label>Autor(es) <span class="required">*</span></label>
                                 <div id="authors-container">
                                     <div class="author-field">
-                                        <input type="text" name="authors[]" class="input author-input " placeholder="Nome do autor" required>
-                                        <button type="button" class="btn btn-add-author" title="Adicionar autor" style="margin-left: 5px;">+</button>
+                                        <input type="text" name="authors[]" class="input author-input "
+                                            placeholder="Nome do autor" required>
+                                        <button type="button" class="btn btn-add-author" title="Adicionar autor"
+                                            style="margin-left: 5px;">+</button>
                                     </div>
                                 </div>
                                 <small class="help-text">Clique em + para adicionar mais autores</small>
@@ -175,8 +177,9 @@
         <script src="assets/js/script.js"></script>
         <script src="assets/js/categorias.js"></script>
         <script src="assets/js/cadastrarLivro.js"></script>
+        <script src="assets/js/auth.js"></script>
+        <script src="assets/js/logout.js"></script>
 </body>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/logout.js"></script>
+
 
 </html>
