pagina de usuario finalizada

--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -38,13 +38,7 @@
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item" href="usuarioDados.html">
-                    <span class="material-symbols-outlined">group</span>
-                    <span>Meus Dados</span>
-                </a>
-            </div>
-            <div class="nav-group">
-                <a class="nav-item" href="index.html">
+                <a class="nav-item logout-link" href="index.html">
                     <span class="material-symbols-outlined">logout</span>
                     <span>Sair</span>
                 </a>
