--- a/usuarioHistorico.html
+++ b/usuarioHistorico.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meus Livros</title>
+
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   <link rel="stylesheet" href="assets/css/global.css">
   <link rel="stylesheet" href="assets/css/usuario.css">
 </head>
@@ -22,84 +24,51 @@
     </div>
   </header>
   <!-- fim do menu -->
+
   <div class="layout">
     <!-- menu lateral -->
     <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
       <div class="nav-group">
-        <a class="nav-item " href="usuarioHome.html">
+        <a class="nav-item" href="usuarioHome.html">
           <span class="material-symbols-outlined">menu_book</span>
           <span>Buscar livros</span>
         </a>
       </div>
+
       <div class="nav-group">
         <a class="nav-item active" href="usuarioHistorico.html">
           <span class="material-symbols-outlined">library_books</span>
           <span>Meus livros</span>
         </a>
       </div>
+
       <div class="nav-group">
-        <a class="nav-item" href="usuarioDados.html">
-          <span class="material-symbols-outlined">group</span>
-          <span>Meus Dados</span>
-        </a>
-      </div>
-      <div class="nav-group">
-        <a class="nav-item" href="index.html">
+        <a class="nav-item logout-link" href="index.html">
           <span class="material-symbols-outlined">logout</span>
           <span>Sair</span>
         </a>
       </div>
     </nav>
     <!-- fim do menu lateral -->
+
     <div class="backdrop" id="backdrop"></div>
+
     <!-- conteúdo -->
     <main class="content-book-history" role="main">
-      <div class="title"> <span>Histórico de Livros</span> </div>
+      <div class="title">
+        <span>Histórico de Livros</span>
+      </div>
+
       <div class="books-history-list-card">
-        <div class="book-history-card">
-          <div class="book-title">Nome do Livro</div>
-          <div class="book-author">autor:</div>
-          <div class="book-date">
-            Data de entrega: 00/00/0000
-            <span class="badge book-status badge-status--info">Comigo</span>
-          </div>
-        </div>
-        <div class="book-history-card">
-          <div class="book-title">Nome do Livro</div>
-          <div class="book-author">autor:</div>
-          <div class="book-date">
-            Data de entrega: 00/00/0000
-            <span class="badge book-status badge-status--success">Entregue</span>
-          </div>
-        </div>
-        <div class="book-history-card">
-          <div class="book-title">Nome do Livro</div>
-          <div class="book-author">autor:</div>
-          <div class="book-date">
-            Data de entrega: 00/00/0000
-            <span class="badge book-status badge-status--success">Entregue</span>
-          </div>
-        </div>
-        <div class="book-history-card">
-          <div class="book-title">Nome do Livro</div>
-          <div class="book-author">autor:</div>
-          <div class="book-date">
-            Data de entrega: 00/00/0000
-            <span class="badge book-status badge-status--warning">Pendente</span>
-          </div>
-        </div>
-        <div class="book-history-card">
-          <div class="book-title">Nome do Livro</div>
-          <div class="book-author">autor:</div>
-          <div class="book-date">
-            Data de entrega: 00/00/0000
-            <span class="badge book-status badge-status--danger">Em atraso</span>
-          </div>
-        </div>
+        <!-- Cards do histórico serão preenchidos dinamicamente pelo JS -->
       </div>
     </main>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/usuarioHistorico.js"></script>
+  </div>
+
+  <!-- Scripts -->
+  <script src="assets/js/auth.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script src="assets/js/usuarioHistorico.js"></script>
+
 </body>
-<script src="assets/js/auth.js"></script>
 </html>
